@@ -1,7 +1,10 @@
 Revision history for Perl extension Net::SSLeay.
 
 1.??
-     Fixed local/30_error.t, so that tests do not fail if diagnostics are enabled.
+     Fixed local/30_error.t, so that tests do not fail if diagnostics are
+     enabled.
+     Fixed errore messages about undefined strings used with length or
+     split. Reported and patched by Peter Heuchert.
 
 1.58 2014-01-15
      Always use size_t for strlen() return value, requested by Alexander Bluhm.
